<resources>
    <string name="en_lang" translatable="false">English</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="af_lang" translatable="false">Afrikaans</string>
    <string name="bg_lang" translatable="false">Bulgarian</string>
    <string name="nl_lang" translatable="false">Dutch</string>
    <string name="fr_lang" translatable="false">French</string>
    <string name="de_lang" translatable="false">German</string>
    <string name="el_lang" translatable="false">Greek</string>
    <string name="zh_lang" translatable="false">Chinese</string>
    <string name="it_lang" translatable="false">Italian</string>
    <string name="ko_lang" translatable="false">Korean</string>
    <string name="lt_lang" translatable="false">Lithuanian</string>
    <string name="pl_lang" translatable="false">Polish</string>
    <string name="pt_lang" translatable="false">Portuguese</string>
    <string name="pt_BR_lang" translatable="false">Portuguese, Brazilian</string>
    <string name="ro_lang" translatable="false">Romanian</string>
    <string name="ru_lang" translatable="false">Russian</string>
    <string name="sk_lang" translatable="false">Slovak</string>
    <string name="es_lang" translatable="false">Spanish</string>
    <string name="sv_lang" translatable="false">Swedish</string>
    <string name="tr_lang" translatable="false">Turkish</string>
    <string name="treatmentssafety_title">Treatments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="danar_useextended_title">Use extended boluses for >200%%</string>
    <string name="danar_bt_name_title">DanaR Bluetooth device</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_storage_permission_text">Please reboot your phone or restart AndroidAPS from the System Settings \notherwise Android APS will not have logging (important to track and verify that the algorithms are working correctly)!</string>
    <string name="alert_dialog_permission_battery_optimization_failed">This device does not appear to support battery optimization whitelisting - you may experience performance issues.</string>
    <string name="description_actions">Some buttons to quickly access common features</string>
    <string name="description_careportal">Enter advanced log book entries.</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="description_objectives">Learning program</string>
    <string name="description_food">Displays the food presets defined in Nightscout</string>
    <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
    <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
    <string name="description_insulin_free_peak">Allows you to define the peak of the insulin activity and should only be used by advanced users</string>
    <string name="description_loop">Activate or deactivate the implementation triggering the loop.</string>
    <string name="description_ns_client">Synchronizes your data with Nightscout</string>
    <string name="openapsma_maxbasal_title">Max U/hr a Temp Basal can be set to</string>
    <string name="openapsma_maxbasal_summary">This value is called max basal in OpenAPS context</string>
    <string name="openapsma_maxiob_title">Maximum basal IOB OpenAPS can deliver [U]</string>
    <string name="openapsma_maxiob_summary">This value is called Max IOB in OpenAPS context\nThis is maximal insulin in [U] APS can deliver at once.</string>
    <string name="openapsama">OpenAPS AMA</string>
    <string name="openapsama_useautosens">Use Autosens feature</string>
    <string name="always_use_shortavg">Always use short average delta instead of simple delta</string>
    <string name="always_use_shortavg_summary">Useful when data from unfiltered sources like xDrip gets noisy.</string>
    <string name="advancedsettings_title">Advanced Settings</string>
    <string name="openapsama_max_daily_safety_multiplier_summary">Default value: 3 This is a key OpenAPS safety cap. What this does is limit your basals to be 3x (in this people) your biggest basal rate. You likely will not need to change this, but you should be aware that’s what is discussed about “3x max daily; 4x current” for safety caps.</string>
    <string name="openapsama_current_basal_safety_multiplier_summary">Default value: 4 This is the other half of the key OpenAPS safety caps, and the other half of “3x max daily; 4x current” of the safety caps. This means your basal, regardless of max basal set on your pump, cannot be any higher than this number times the current level of your basal. This is to prevent people from getting into dangerous territory by setting excessively high max basals before understanding how the algorithm works. Again, the default is 4x; most people will never need to adjust this and are instead more likely to need to adjust other settings if they feel like they are “running into” this safety cap.</string>
    <string name="key_openapsama_autosens_adjusttargets" translatable="false">autosens_adjust_targets</string>
    <string name="openapsama_autosens_adjusttargets">Autosens adjust targets too</string>
    <string name="openapsama_autosens_adjusttargets_summary">Default value: true\nThis is used to allow autosens to adjust BG targets, in addition to ISF and basals.</string>
    <string name="key_openapsama_bolussnooze_dia_divisor" translatable="false">bolussnooze_dia_divisor</string>
    <string name="openapsama_bolussnooze_dia_divisor_summary">Default value: 2\nBolus snooze is enacted after you do a meal bolus, so the loop won’t counteract with low temps when you’ve just eaten. The example here and default is 2; so a 3 hour DIA means that bolus snooze will be gradually phased out over 1.5 hours (3DIA/2).</string>
    <string name="openapsama_min_5m_carbimpact" translatable="false">min_5m_carbimpact</string>
    <string name="openapsama_min_5m_carbimpact_summary">Default value: 3.0 (AMA) or 8.0 (SMB). This is a setting for default carb absorption impact per 5 minutes. The default is an expected 3mg/dl/5min. This affects how fast COB are decayed, and how much carb absorption is assumed in calculating future predicted BG, when BG is falling more than expected, or not rising as much as expected.</string>
    <string name="openapsama_L1" translatable="false">L1</string>
    <string name="openapsama_L1_summary">Default value: -0.0001. Value of the first gain of the observator.</string>
    <string name="openapsama_L2" translatable="false">L2</string>
    <string name="openapsama_L2_summary">Default value: -0.0001. Value of the second gain of the observator.</string>
    <string name="openapsama_Ub" translatable="false">Ub</string>
    <string name="openapsama_Ub_summary">Default value: 0.017. Ub, débit basal en U/min.</string>
    <string name="openapsama_CF" translatable="false">CF</string>
    <string name="openapsama_CF_summary">Default value: 50. CF, compensatoire en mg/dL/U.</string>
    <string name="openapsama_CIR" translatable="false">CIR</string>
    <string name="openapsama_CIR_summary">Default value: 500. CIR, Carbo-to-Insulino-Ratio en g/U.</string>
    <string name="openapsama_DIA" translatable="false">DIA</string>
    <string name="openapsama_DIA_summary">Default value: 60. DIA, durée de l\'insuline active en min.</string>
    <string name="openapsama_max_basal" translatable="false">Max basal</string>
    <string name="openapsama_max_basal_summary">Default value: 5. max_basal.</string>
    <string name="openapsama_repas" translatable="false">Meal</string>
    <string name="openapsama_repas_summary">Default value: 0. Meal, quantity of glucides in gramms.</string>
    <string name="openapsama_heurerepas" translatable="false">MealHour</string>
    <string name="openapsama_heurerepas_summary">Default value: 0. The hour of the meal (between 0 and 23)</string>
    <string name="openapsama_minuterepas" translatable="false">MealMinute</string>
    <string name="openapsama_minuterepas_summary">Default value: 0. Minute of the meal (between 0 and 59)</string>
    <string name="manual_constant" translatable="false">Valeur de BG constante</string>
    <string name="manual_constant_summary">Default value: 100. manual_constant.</string>
    <string name="openapsama_link_to_preferncejson_doc_txt">Attention!\nNormally you do not have to change these values below. Please CLICK HERE and READ the text and make sure you UNDERSTAND it before change any of these values.</string>
    <string name="openapsama_link_to_preferncejson_doc" translatable="false">http://openaps.readthedocs.io/en/latest/docs/walkthrough/phase-3/beyond-low-glucose-suspend.html</string>
    <string name="dexcomg5_nsupload_title">Upload BG data to NS</string>
    <string name="key_dexcomg5_nsupload" translatable="false">dexcomg5_nsupload</string>
    <string name="bgsource_upload">BG upload settings</string>
    <string name="dexcomg5_xdripupload_title">Send BG data to xDrip+</string>
    <string name="key_dexcomg5_xdripupload" translatable="false">dexcomg5_xdripupload</string>
    <string name="dexcomg5_xdripupload_summary">In xDrip+ select 640g/Eversense data source</string>
    <string name="key_openapsma_max_basal" translatable="false">openapsma_max_basal</string>
    <string name="key_openapsama_current_basal_safety_multiplier" translatable="false">openapsama_current_basal_safety_multiplier</string>
    <string name="key_openapsama_max_daily_safety_multiplier" translatable="false">openapsama_max_daily_safety_multiplier</string>
    <string name="key_openapsma_max_iob" translatable="false">openapsma_max_iob</string>
    <string name="key_openapsama_useautosens" translatable="false">openapsama_useautosens</string>
    <string name="key_openapsama_min_5m_carbimpact" translatable="false">openapsama_min_5m_carbimpact</string>
    <string name="key_openapsama_L1" translatable="false">openapsama_L1</string>
    <string name="key_openapsama_L2" translatable="false">openapsama_L2</string>
    <string name="key_openapsama_Ub" translatable="false">openapsama_Ub</string>
    <string name="key_openapsama_CF" translatable="false">openapsama_CF</string>
    <string name="key_openapsama_CIR" translatable="false">openapsama_CIR</string>
    <string name="key_openapsama_DIA" translatable="false">openapsama_DIA</string>
    <string name="key_openapsama_max_basal" translatable="false">openapsama_max_basal</string>
    <string name="key_manual_constant" translatable="false">manual_constant</string>
    <string name="key_openapsama_repas" translatable="false">openapsama_repas</string>
    <string name="key_openapsama_heurerepas" translatable="false">openapsama_heurerepas</string>
    <string name="key_openapsama_minuterepas" translatable="false">openapsama_minuterepas</string>
    <string name="key_always_use_shortavg" translatable="false">always_use_shortavg</string>
    <string name="openapsama_bolussnooze_dia_divisor">Bolus snooze dia divisor</string>
    <string name="openapsama_max_daily_safety_multiplier">Max daily safety multiplier</string>
    <string name="openapsama_current_basal_safety_multiplier">Current basal safety multiplier</string>
    <string name="key_openapsama_calibrationobs" translatable="false">openapsama_calibrationobs</string>
    <string name="openapsama_calibrationobs">Calibration observateur</string>
</resources>