<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/bgsource_upload">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_dexcomg5_nsupload"
            android:title="@string/dexcomg5_nsupload_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_dexcomg5_xdripupload"
            android:summary="@string/dexcomg5_xdripupload_summary"
            android:title="@string/dexcomg5_xdripupload_title" />
      
        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="5.0"
            android:dialogMessage="@string/manual_constant_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_manual_constant"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/manual_constant"
            validate:floatmaxNumber="300.0"
            validate:floatminNumber="0.0"
            validate:testType="floatNumericRange" />

    </PreferenceCategory>

</PreferenceScreen>
